// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Logged In 1`] = `
<section
  class="flex flex-col col-span-2 pt-6 text-center bg-white shadow-md lg:col-span-1 rounded-shape-xl"
>
  <h2
    class="px-4 mb-2 text-xl font-bold tracking-wide uppercase font-heading text-main-700"
  >
    
      
    
  </h2>
   
  <div
    class="flex flex-row flex-wrap justify-around w-full"
  >
    <!---->
     
    <div
      class="inline-block mx-8 mb-2 text-gray-900 whitespace-no-wrap font-heading"
    >
      <p
        class="text-5xl font-bold"
      >
        
          *
        
      </p>
       
      <p
        class="inline-block text-sm text-gray-500 uppercase"
      >
        
        Position
      
      </p>
    </div>
     
    <div
      class="inline-block mx-8 mb-2 text-gray-900 whitespace-no-wrap font-heading"
    >
      <p
        class="text-5xl font-bold"
      >
        
        49
      
      </p>
       
      <p
        class="inline-block text-sm text-gray-500 uppercase"
      >
        
        Points
      
      </p>
    </div>
  </div>
   
  <div
    class="px-6"
  >
    <router-link-stub
      class="mt-4 mb-4 sm:mt-3 button"
      to="/events/TestEvent/results"
    >
      
      View Results
    
    </router-link-stub>
  </div>
   
  <div
    class="flex-grow w-full px-4 pt-4 pb-4 mt-2 shadow md:px-6 bg-main-50 rounded-shape-xl"
  >
    <div
      class="flex flex-row flex-wrap justify-around px-6"
    >
      <p
        class="mx-2 mb-1"
      >
        <b
          class="mr-2 text-main-800"
        >
          Id:
        </b>
        
        7
      
      </p>
       
      <p
        class="mx-2 mb-1"
      >
        <b
          class="mr-2 text-main-800"
        >
          Type:
        </b>
        
        manual
      
      </p>
       
      <p
        class="mx-2 font-bold text-main-800 font-heading"
      >
        
        Incomplete Result
      
      </p>
    </div>
     
    <div
      class="w-full mt-2"
    >
      <button
        class="button button-dark"
      >
        Mark as Complete
      </button>
       
      <button
        class="button button-dark"
      >
        Hide Result
      </button>
    </div>
  </div>
</section>
`;

exports[`Renders Correctly - Not Logged In 1`] = `
<section
  class="flex flex-col col-span-2 pt-6 text-center bg-white shadow-md lg:col-span-1 rounded-shape-xl"
>
  <h2
    class="px-4 mb-2 text-xl font-bold tracking-wide uppercase font-heading text-main-700"
  >
    
      
    
  </h2>
   
  <div
    class="flex flex-row flex-wrap justify-around w-full"
  >
    <!---->
     
    <div
      class="inline-block mx-8 mb-2 text-gray-900 whitespace-no-wrap font-heading"
    >
      <p
        class="text-5xl font-bold"
      >
        
          5
          
        <sup
          class="relative inline-block -ml-3 text-xl font-normal text-gray-500 -top-5"
        >
          
            th
          
        </sup>
      </p>
       
      <p
        class="inline-block text-sm text-gray-500 uppercase"
      >
        
        Position
      
      </p>
    </div>
     
    <div
      class="inline-block mx-8 mb-2 text-gray-900 whitespace-no-wrap font-heading"
    >
      <p
        class="text-5xl font-bold"
      >
        
        43
      
      </p>
       
      <p
        class="inline-block text-sm text-gray-500 uppercase"
      >
        
        Points
      
      </p>
    </div>
  </div>
   
  <div
    class="px-6"
  >
    <router-link-stub
      class="mt-4 mb-4 sm:mt-3 button"
      to="/events/TestEvent/results"
    >
      
      View Results
    
    </router-link-stub>
  </div>
   
  <!---->
</section>
`;
